Add data gathered

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -384,6 +384,7 @@
     "    - **mentions_screen_name:** Screen name of the referenced user in the text of the tweet.\n",
     "    - **mentions_user_id:** ID of the mentioned user, as an integer in the text of the tweet.\n",
     "    - **quoted_status_id:** This field only surfaces when the Tweet is a quote Tweet. This field contains the integer value Tweet ID of the quoted Tweet. \n",
+    "    - **quoted_user_id:** ID of the user quoted.\n",
     "    - **quoted_status_id_rwetweet:** This field only surfaces when the Tweet is a retweet and the original Tweet is a is a quote Tweet. This field contains the integer value Tweet ID of the quoted Tweet.\n",
     "    - **retweet_count:** Number of times this Tweet has been retweeted.\n",
     "    - **retweet_count_retweet:** This field only surfaces when the Tweet is a retweet. Indicates approximately how many times the original Tweet has been retweeted.\n",
@@ -460,6 +461,9 @@
     "        if 'quoted_status_id_str' in tweet_status:\n",
     "            #the id of the quoted tweet.\n",
     "            quoted_status_id_str = tweet_status['quoted_status_id_str']\n",
+    "            if 'quoted_status' in tweet_status:\n",
+    "                #id of the user quoted.\n",
+    "                quoted_user_id_str = tweet_status['quoted_status']['user']['id_str']\n",
     "    \n",
     "    except Exception as e:\n",
     "        #register in the log any exception that it can occurs.\n",
@@ -478,6 +482,7 @@
     "                                                          'mentions_name': mentions_name,\n",
     "                                                          'mentions_screen_name': mentions_screen_name,\n",
     "                                                          'quoted_status_id': quoted_status_id_str,\n",
+    "                                                          'quoted_user_id': quoted_user_id_str,\n",
     "                                                          'quoted_status_id_rwetweet': quoted_status_id_rwetweet\n",
     "                                                          },ignore_index=True)\n"
    ]
