Add data gathered: quoted_user_id_retweet

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -386,6 +386,7 @@
     "    - **quoted_status_id:** This field only surfaces when the Tweet is a quote Tweet. This field contains the integer value Tweet ID of the quoted Tweet. \n",
     "    - **quoted_user_id:** ID of the user quoted.\n",
     "    - **quoted_status_id_rwetweet:** This field only surfaces when the Tweet is a retweet and the original Tweet is a is a quote Tweet. This field contains the integer value Tweet ID of the quoted Tweet.\n",
+    "    - **quoted_user_id_retweet:** This field only surfaces when the Tweet is a retweet and the original Tweet is a is a quote Tweet. This field contains the integer value user ID of the quoted Tweet.\n",
     "    - **retweet_count:** Number of times this Tweet has been retweeted.\n",
     "    - **retweet_count_retweet:** This field only surfaces when the Tweet is a retweet. Indicates approximately how many times the original Tweet has been retweeted.\n",
     "    "
@@ -457,6 +458,9 @@
     "            if 'quoted_status_id_str' in tweet_status['retweeted_status']:\n",
     "                #if the tweet is a retweet of a previously quoted tweet. The tweet id of the original quoted tweet.\n",
     "                quoted_status_id_rwetweet = tweet_status['retweeted_status']['quoted_status_id_str']\n",
+    "                if 'quoted_status' in tweet_status['retweeted_status']:\n",
+    "                    #id of the user quoted.\n",
+    "                    quoted_user_id_retweet = tweet_status['retweeted_status']['quoted_status']['user']['id_str']\n",
     "        #if the tweet is a quoted ot other tweet.\n",
     "        if 'quoted_status_id_str' in tweet_status:\n",
     "            #the id of the quoted tweet.\n",
@@ -483,7 +487,8 @@
     "                                                          'mentions_screen_name': mentions_screen_name,\n",
     "                                                          'quoted_status_id': quoted_status_id_str,\n",
     "                                                          'quoted_user_id': quoted_user_id_str,\n",
-    "                                                          'quoted_status_id_rwetweet': quoted_status_id_rwetweet\n",
+    "                                                          'quoted_status_id_rwetweet': quoted_status_id_rwetweet,\n",
+    "                                                          'quoted_user_id_retweet': quoted_user_id_retweet\n",
     "                                                          },ignore_index=True)\n"
    ]
   },
