--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -489,7 +489,13 @@
     "                                                          'quoted_user_id': quoted_user_id_str,\n",
     "                                                          'quoted_status_id_rwetweet': quoted_status_id_rwetweet,\n",
     "                                                          'quoted_user_id_retweet': quoted_user_id_retweet\n",
-    "                                                          },ignore_index=True)\n"
+    "                                                          },ignore_index=True)\n",
+    "    #It sorts the columns of the dataframe. \n",
+    "    df_tweepy_extractions = df_tweepy_extractions[['tweet_id', 'retweet_count', 'favorite_count', 'favorites_count_retweet',\n",
+    "                                                 'retweet_count_retweet', 'entities_name', 'entities_screen_name', \n",
+    "                                                 'entities_type', 'entities_user_id', 'mentions_user_id', 'mentions_name',\n",
+    "                                                 'mentions_screen_name', 'quoted_status_id', 'quoted_user_id', \n",
+    "                                                 'quoted_status_id_rwetweet', 'quoted_user_id_retweet']]\n"
    ]
   },
   {
@@ -2961,7 +2967,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tidiness"
+    "#### Tidiness\n",
+    "\n",
+    "##### `df_twitter_archive_enhanced` table:\n",
+    "\n",
+    "- Columns `doggo`, `floofer`, `pupper` and `puppo` should be a unique column called dog_type.\n",
+    "\n",
+    "##### `df_image_predictions` table:\n",
+    "\n",
+    "\n",
+    "##### `df_tweepy_extractions` table:\n",
+    "\n",
+    "- this dataframe should be integrated in df_twitter_archive_enhanced.\n",
+    "- we don't need the columns `entities_name`, `entities_screen_name`, `entities_type`, `mentions_name` and `mentions_screen_name` because we are going to use the ids, so we can drop them by now.\n",
+    "\n",
+    "##### `df_scrapped_replies` table:\n",
+    "\n",
+    "- we should reorder the columns."
    ]
   },
   {
