Actualize issues types

--- a/wrangle_report.ipynb
+++ b/wrangle_report.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "source": [
     "<a id='quality'></a>\n",
-    "### Quality Issues\n",
+    "#### Quality\n",
     "\n",
     "##### `df_twitter_archive_enhanced` table:\n",
     "\n",
@@ -153,6 +153,7 @@
     "- And many rows have a numerator not very realistic.\n",
     "- The name of the dogs `a`, `O`, `by`, `an`, `the`, `his`, `all`and `my` are incorrect. (We are not going to correct this by the moment. We do not need them)\n",
     "- There are not many dogs classified as doggo, floofer, etc. And 14 of them have double clasification.\n",
+    "- We would like to know the number of replies to each tweet.\n",
     "\n",
     "\n",
     "##### `df_image_predictions` table:\n",
@@ -162,11 +163,14 @@
     "\n",
     "##### `df_tweepy_extractions` table:\n",
     "\n",
+    "- The column `retweet_count_retweet` has no sense because it has the same value as `retweet_count`.\n",
+    "- we don't need the columns `entities_name`, `entities_screen_name`, `entities_type`, `mentions_name` and `mentions_screen_name` because we are going to use only the ids, so we can drop them by now.\n",
     "- Nulls represented as void strings in `entities_name`,\t`entities_screen_name`, `entities_type`, `entities_user_id`,\t`entions_name`,\t`mentions_screen_name`,\t`mentions_user_id`,\t`quoted_status_id`,\t`quoted_status_id_rwetweet` and `retweet_count_retweet`.\n",
     "\n",
     "\n",
     "##### `df_scrapped_replies` table:\n",
     "\n",
+    "- we don't need the columns `user_name` and `full_name` because we are goin to user only the id.\n",
     "- The type of the columns `favs`, `replies` and `retweets` should be integer instead of float.\n",
     "- The type of the columns `user_id` and `reply_id` should be a string.\n",
     "- `language` type should be categorical.\n",
@@ -180,27 +184,23 @@
    "metadata": {},
    "source": [
     "<a id='tidiness'></a>\n",
-    "### Tidiness Issues\n",
+    "#### Tidiness\n",
     "\n",
     "##### `df_twitter_archive_enhanced` table:\n",
     "\n",
     "- Columns `doggo`, `floofer`, `pupper` and `puppo` should be a unique column called dog_type.\n",
-    "- This new column should be categorical.\n",
-    "- We would like to know the number of replies to each tweet.\n",
     "\n",
     "\n",
     "##### `df_image_predictions` table:\n",
     "\n",
+    "- this dataframe should be integrated in df_twitter_archive_enhanced.\n",
     "\n",
     "##### `df_tweepy_extractions` table:\n",
     "\n",
-    "- The column `retweet_count_retweet` has no sense because it has the same value as `retweet_count`.\n",
-    "- we don't need the columns `entities_name`, `entities_screen_name`, `entities_type`, `mentions_name` and `mentions_screen_name` because we are going to use only the ids, so we can drop them by now.\n",
     "- this dataframe should be integrated in df_twitter_archive_enhanced.\n",
     "\n",
     "##### `df_scrapped_replies` table:\n",
     "\n",
-    "- we don't need the columns `user_name` and `full_name` because we are goin to user only the id.\n",
     "\n",
     "##### `df_twitter_archive_enhanced` and `df_scrapped_replies` \n",
     "\n",
@@ -267,6 +267,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* I was not able to extract the number of replies for each tweet using the API, so I have added a new column to `df_twitter_archive_enhanced_copy` counting the replies estoured in `df_scrapped_replies_copy`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='clean_tidiness'></a>\n",
     "### Tidiness"
    ]
@@ -276,41 +283,6 @@
    "metadata": {},
    "source": [
     "* In `df_twitter_archive_enhanced_copy` I have changed the columns `doggo`, `floofer`, `pupper` and `puppo` by a sigle categorical column called `dog_type` with four values."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* I was not able to extract the number of replies for each tweet using the API, so I have added a new column to `df_twitter_archive_enhanced_copy` counting the replies estoured in `df_scrapped_replies_copy`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*  I have deleted from `df_tweepy_extractions` the columns `entities_name`, `entities_screen_name`, `entities_type`, `mentions_name` and `mentions_screen_name` because we are going to use only the ids, so we can drop them by now."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*  In `df_tweepy_extractions_copy` The column `retweet_count_retweet` has no sense because it has the same value as `retweet_count`, so we have drop this column."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* I have mereged `df_tweepy_extractions_copy` into `df_twitter_archive_enhanced_copy` because both have information about the tweets in the @rate_dogs account."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* I have drop the columns `user_name` and `full_name` in `df_scrapped_replies_copy` because we are going to use the id."
    ]
   },
   {
@@ -333,6 +305,20 @@
    "metadata": {},
    "source": [
     "* In `df_twitter_archive_enhanced_copy` I have dropped all the references to other user names (@XXXXX)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*  I have deleted from `df_tweepy_extractions` the columns `entities_name`, `entities_screen_name`, `entities_type`, `mentions_name` and `mentions_screen_name` because we are going to use only the ids, so we can drop them by now."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*  In `df_tweepy_extractions_copy` The column `retweet_count_retweet` has no sense because it has the same value as `retweet_count`, so we have drop this column."
    ]
   },
   {
@@ -367,6 +353,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* I have drop the columns `user_name` and `full_name` in `df_scrapped_replies_copy` because we are going to use the id."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='clean_tidiness1'></a>\n",
     "### Tidiness"
    ]
@@ -376,7 +369,21 @@
    "metadata": {},
    "source": [
     "* I have returned to tidiness issues because there is a problem that I prefered to arrange it at the end.\n",
-    "I said that I preferred to gather all the information related with user mentions, replies to a tweet, retweets, quoted, etc  in `df_twitter_archive_enhanced_copy` and `df_scrapped_replies_copy` summarized in one sigle table. So we could have all the information regarded with interactions between users in a single table.\n",
+    "I have mereged `df_tweepy_extractions_copy` into `df_twitter_archive_enhanced_copy` because both have information about the tweets in the @rate_dogs account."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* I have mereged `df_image_predictions_copy` into `df_twitter_archive_enhanced_copy` because both have information about the tweets in the @rate_dogs account."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* I said that I preferred to gather all the information related with user mentions, replies to a tweet, retweets, quoted, etc  in `df_twitter_archive_enhanced_copy` and `df_scrapped_replies_copy` summarized in one sigle table. So we could have all the information regarded with interactions between users in a single table.\n",
     "\n",
     "What we have done is to create a new data frame `df_interactions` whit this information. This data frame has the colums:\n",
     "\n",
@@ -436,7 +443,18 @@
     "* **replies_count (Int64):** Number of replies to each tweet in @dog_rates account.\n",
     "* **retweet_count (Float64):** Number of times this Tweet has been retweeted.\n",
     "* **favorite_count (Float64):** Indicates approximately how many times this Tweet has been liked by Twitter users.\n",
-    "* **favorites_count_retweet (Float64):** This field only surfaces when the Tweet is a retweet. Indicates approximately how many times the original Tweet has been liked by Twitter users.\n",
+    "* **favorites_count_retweet (Float64):** This field only surfaces when the Tweet is a retweet. Indicates approximately how many times the original Tweet has been liked by Twitter users. \n",
+    "* **jpg_url (String):** The url of the image of the tweet. It can be downloaded. \n",
+    "* **img_num (Int64):** The image with the most confident prediction.\n",
+    "* **p1 (String):** I is the algorithm's #1 prediction for the image in the tweet.\n",
+    "* **p1_conf (Float64):** It is how confident the algorithm is in its #1 prediction.\n",
+    "* **p1_dog (Int64):** It is whether or not the #1 prediction is a breed of dog.\n",
+    "* **p2 (String):** It is the algorithm's second most likely prediction.\n",
+    "* **p2_conf (Float64):** It is how confident the algorithm is in its #2 prediction.\n",
+    "* **p2_dog (Int64):** It is whether or not the #2 prediction is a breed of dog.\n",
+    "* **p3 (String): It is the algorithm's third most likely prediction.\n",
+    "* **p3_conf (Float64):** It is how confident the algorithm is in its #3 prediction.\n",
+    "* **p3_dog (Int64):** It is whether or not the #3 prediction is a breed of dog.\n",
     "\n",
     "**df_scrapped_replies_copy**\n",
     "\n",
@@ -452,20 +470,6 @@
     "* **timestamp (String):** Date_time of the reply.\n",
     "* **user_id (String):** Id of the user who has replied.\n",
     "\n",
-    "**df_image_predictions_copy**\n",
-    "\n",
-    "* **tweet_id (String):** The integer representation of the unique identifier for this Tweet. \n",
-    "* **jpg_url (String):** The url of the image of the tweet. It can be downloaded. \n",
-    "* **img_num (Int64):** The image with the most confident prediction.\n",
-    "* **p1 (String):** I is the algorithm's #1 prediction for the image in the tweet.\n",
-    "* **p1_conf (Float64):** It is how confident the algorithm is in its #1 prediction.\n",
-    "* **p1_dog (Int64):** It is whether or not the #1 prediction is a breed of dog.\n",
-    "* **p2 (String):** It is the algorithm's second most likely prediction.\n",
-    "* **p2_conf (Float64):** It is how confident the algorithm is in its #2 prediction.\n",
-    "* **p2_dog (Int64):** It is whether or not the #2 prediction is a breed of dog.\n",
-    "* **p3 (String): It is the algorithm's third most likely prediction.\n",
-    "* **p3_conf (Float64):** It is how confident the algorithm is in its #3 prediction.\n",
-    "* **p3_dog (Int64):** It is whether or not the #3 prediction is a breed of dog.\n",
     "\n",
     "**df_interactions**\n",
     "\n",
@@ -482,14 +486,19 @@
     "\n",
     "This are the name of the tables stores int de DBLite database with the content indicated in the previous dataframes.\n",
     "\n",
-    "* **twitter_archive_enhanced**\n",
+    "* **twitter_master**\n",
     "\n",
     "* **scrapped_replies**\n",
     "\n",
-    "* **image_predictions**\n",
-    "\n",
     "* **interactions**\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
